# school-management-portal

./: db.sql  init.sql
smp-backend/go-cron-service/: go.mod  go.sum  main.go
smp-backend/go-cron-service/handler/: handler.go
smp-backend/go-cron-service/models/: attendance.go  teacher.go
smp-backend/go-cron-service/redis/: redis.go
smp-backend/python_service/python_scripts/: cron_job.py  python_service.py  smtp.py
smp-backend/rust-api/: .env  Cargo.toml  index.html  smtp.txt  trigger.txt
smp-backend/rust-api/extras/: Cargo.toml  auth_controller.rs  main.rs
smp-backend/rust-api/src/: admin_controller.rs  auth.rs  auth_controller.rs  lib.rs  main.rs  routes.rs
smp-backend/rust-api/src/db/: connection.rs
smp-backend/rust-api/src/handlers/: admin.rs  auth_handler.rs  mod.rs  shared.rs  student.rs  student_handler.rs  teacher.rs
smp-backend/rust-api/src/middleware/: require_authentication.rs
smp-backend/rust-api/src/models/: attendance.rs  attendence.rs  class.rs  grade.rs  login.rs  mod.rs  notice.rs  student.rs  subject.rs  teacher.rs  timetable.rs
smp-fe/: README.md  angular.json  package-lock.json  package.json
smp-fe/src/: index.html  styles.css
smp-fe/src/app/: app-routing.module.ts  app.component.css  app.component.spec.ts  app.component.ts  app.module.ts
smp-fe/src/app/admin/: admin-router.module.ts  admin.module.ts
smp-fe/src/app/header/: header.component.html  header.component.ts
smp-fe/src/app/login/: login-routing.module.ts  login.module.ts
smp-fe/src/app/models/: attendance.model.ts  grade.model.ts  notice.model.ts  schedule.model.ts  student.model.ts  subject.model.ts  teacher.model.ts  timetable.model.ts
smp-fe/src/app/notice/: notice.component.html  notice.component.ts
smp-fe/src/app/services/: AuthGuard.ts  auth.service.ts  common.service.ts  login.service.ts  (+4 more)
(+79 files in other folders)
