[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
tokio = { version = "1.0", features = ["full"] }
axum = "0.2"
tokio-postgres = "0.7"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "7.0"
serde_json = "1.0"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls","postgres","chrono","uuid"] }
dotenv = "0.15.0"
tower-http = { version = "0.5.2", features = ["cors"]}