[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.0.1"
actix-cors = "0.6.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-native-tls", "chrono", "json"] }
jsonwebtoken = "7.0"
serde_json = "1.0"
